2008-03-03  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.9.8 release.
	* download.html: Ditto.

2008-01-18  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.9.4 release.
	* download.html: Ditto.

2007-12-01  Ricky Zhou  <ricky.zhou@gmail.com>
	* index.html: Fix closing li tag, as mentioned in bug #500918.  

2007-10-15  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.8.1 release.
	* download.html: Ditto.

2007-09-17  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.8.0 release.
	* download.html: Ditto.

2007-08-13  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.7.4 release.
	* download.html: Ditto.

2007-08-05  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.7.3 release.
	* download.html: Ditto.

2007-07-12  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.7.2 release.
	* download.html: Ditto.

2007-05-16  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.7.1 release.
	* download.html: Ditto.

2007-04-23  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* plugins.html: Fixed broken link to wiki.

2007-04-23  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.7.0 release.
	* download.html: Ditto.

2007-04-10  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.6.3 release.
	* download.html: Ditto.

2007-03-19  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Fixed "higlights" typo (Thanks Tommi).

2007-03-12  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.6.1 release.
	* download.html: Ditto.

2007-03-07  Tommi Asiala  <tommi@asiala.info>

	* default.css
	* download.html
	* features.html
	* getinvolved.html
	* images/applet-plugins.png
	* images/package-x-generic.png
	* images/Makefile.am
	* index.html
	* Makefile.am
	* plugins.html
		