@@ -70,6 +70,22 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+	    
+	    <h3>March 10th 2008</h3>
+   	      Stable version 0.10.0 released! New features since previous stable
+   	      version include:
+   	      <ul>
+		<li>Organize your notes into Notebooks</li>
+		<li>New Insert Timestamp Addin</li>
+		<li>HTML Export formatting improvements</li>
+		<li>Bulleted-list handling improvements</li>
+		<li>Drag and drop links (web/file/etc.) improvements</li>
+		<li>Open Search All Notes and close a note via DBus</li>
+		<li>Remove bundled ndesk-dbus-* packages (they're in GNOME now)</li>
+		<li>Tasks Addin removed</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_10_0/NEWS?view=markup">more</a></li>
+   	      </ul>
+   	      <a href="download.html">Download it</a>
 
 	    <h3>March 3rd 2008</h3>
    	      <b>Unstable</b> version 0.9.8 released!  This represents hard code freeze until 0.10.0 is released.  New in this and previous 0.9.x releases:
