@@ -1,3 +1,8 @@
+2008-03-10  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.10.0 release.
+	* download.html: Ditto.
+
 2008-03-03  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* index.html: Updated for 0.9.8 release.
